# xray_classification

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  modal_app.py  pyproject.toml  requirements.txt  setup.py
configs/: deploy_config.yaml  train_config.yaml
docs/: METHODOLOGY.md
models/: training_history.json
notebooks/: 01_eda.ipynb
reports/figures/: augmentation_ablation_results.json  evaluation_metrics.json  threshold_analysis.json
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/data/: __init__.py  dataset.py  download_dataset.py  make_dataset.py  transforms.py  validate_data.py
src/features/: __init__.py
src/models/: __init__.py  architecture.py  augmentation_ablation.py  evaluate.py  hyperparameter_tuning.py  train.py
src/visualization/: __init__.py  eda_analysis.py  pixel_edge_analysis.py  run_gradcam.py  visualize.py
submission/: PROJECT_SUMMARY.md  QUICK_START.md  report.aux  report.out  report.tex
tests/: __init__.py  test_api.py  test_data.py  test_model.py
